# RenderEngine

./: .gitignore  .gitmodules  README.en.md  README.md  RenderEngine.sln  build_RE.bat
RenderEngine/: RenderEngine.vcxproj  RenderEngine.vcxproj.filters
RenderEngine/src/: RenderEngine.h
RenderEngine/src/RenderEngine/: Application.h  EntryPoint.h
SandBox/: SandBox.vcxproj  SandBox.vcxproj.filters
SandBox/src/: SanboxApp.cpp  SanboxApp.h
bin-int/Debug-x64/RenderEngine/: RenderEngine.dll.recipe  RenderEngine.ilk  vc143.idb
bin-int/Debug-x64/RenderEngine/RenderEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
bin-int/Debug-x64/SandBox/: SandBox.exe.recipe  SandBox.ilk  vc143.idb
bin-int/Debug-x64/SandBox/SandBox.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  SandBox.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
source/: CMakeLists.txt
source/GLFW/: CMakeLists.txt
source/Glad/: CMakeLists.txt
source/Glad/include/glad/: glad.h
source/Glad/src/: glad.c
source/ImGui/: CMakeLists.txt
source/RenderEngine/: CMakeLists.txt
source/RenderEngine/Core/private/: Application.cpp  LayerStack.cpp  Log.cpp
source/RenderEngine/Core/public/: Application.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.h  LayerStack.h  Log.h  MouseButtonCodes.h  RenderEngine.h  Window.h
source/RenderEngine/Events/public/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
source/RenderEngine/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
source/RenderEngine/Platform/OpenGL/: ImGuiOpenGLRender.cpp
source/RenderEngine/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
source/RenderEngine/private/: Application.cpp
source/RenderEngine/public/: Application.h  EntryPoint.h  Log.h
source/RenderEngine/src/: RenderEngine.h
source/RenderEngine/src/RenderEngine/: Core.h
source/SandBox/: CMakeLists.txt  SanboxApp.cpp  SanboxApp.h
source/SandBox/private/: SanboxApp.cpp  SanboxApp.h
